# peng-homelab

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  rabbit_test.py  requirements.txt
.github/: ci.yml  copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  app.py  auth.py  cloudflare.py  config.py  ip_test.py  log.py  rabbitmq_publisher.py  scheduler.py
app/config/: config.py  config_sample.json
app/handlers/: message_handler.py  schedule_message_check.py
app/models/: changes.py
app/services/email_check/: email_check.py  imap_email_checker.py
app/services/email_related/: email_scheduler.py  email_send.py
app/services/homelab_services/: homelab_services_update.py
app/services/ip_update/: cloudflare.py  ip_test.py
app/services/mattermost_email/: email_check.py
app/utils/: imap_email_checker.py  log.py  minio_connection.py  rabbitmq_consumer.py  rabbitmq_publisher.py  smtp_email_sender.py  vaultwarden_client.py
archive/: changes.py  deployment.py  deployment_handlers.py  deployment_output.py  message_format.py  message_handler.py  minio_storage.py  openai_api.py  read_file.py  schedule_message_check.py  slack.py
archive/updater/: docker_checker.py  helm_checker.py  update.py  update_handler.py
archive/upgrader/: upgrade.py  upgrade_handler.py
doc/: 4-Feature-Schedule-email.md
test/: app_aio_test.py  app_deployment_test.py  app_update_test.py  app_upgrade_test.py  cloudflare_test.py  docker_test.py  email_scheduler_test.py  email_test.py  imap_test.py  minio_test.py  openai_test.py  rabbit_consumer.py  rabbit_publisher.py  reader_test.py  slack_test.py  smtp_test.py  v1.0.2_test.py  vaultwarden_client_test.py
(+8 files in other folders)
