[project]
name = "Peng-Homelab"
version = "1.1.2"
description = "A Homelab Management Application"
authors = [
    { name = "Noah Ding", email = "noah@dingyipeng.com" },
    { name = "Tena Walcott", email = "tw@tenawalcott.com" }
]
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "pika==1.3.2",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "requests==2.32.3",
    "schedule==1.2.2",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

