[project]
name = "Peng-Homelab"
version = "2.0.0"
description = "A Homelab Management Application"
authors = [
    { name = "Noah Ding", email = "noah@dingyipeng.com" },
    { name = "Tena Walcott", email = "tw@tenawalcott.com" }
]
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "dotenv>=0.9.9",
    "email-to>=0.1.0",
    "fastapi[standard]>=0.116.1",
    "idna==3.10",
    "minio>=7.2.15",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pyjwt>=2.10.1",
    "python-vaultwarden>=1.0.1",
    "requests==2.32.3",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
extend-exclude = ["archive/**"]
